sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:25: error: not found: value i
      if (plusPetit(i+1, i))
                    ^AlgCocktailSort1:25: error: not found: value i
      if (plusPetit(i+1, i))
                         ^AlgCocktailSort1:27: error: not found: value i
        echange(i, i+1);
                ^AlgCocktailSort1:27: error: not found: value i
        echange(i, i+1);
                   ^AlgCocktailSort1:30: error: value +- is not a member of Int
      j+-=1;
       ^